# JustTodo

./: .gitignore  .prettierignore  Cargo.toml  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.githooks/: pre-commit  pre-push
.github/: release-drafter.yml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: CODE_AUDIT.md  DEVELOPMENT_PLAN.md  PERMISSIONS_AUDIT.md  RELEASE_PROCESS.md
scripts/: init-template.mjs  release.cjs  sync-version.cjs  validate-version.cjs
src/: App.tsx  Loading.tsx  i18n.ts  main.test.ts  main.tsx
src-tauri/: Cargo.toml  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/app/default/: settings.json
src/components/: About.test.tsx  About.tsx  Hello.test.tsx  Home.tsx  MainWindow.test.tsx  MainWindow.tsx  Settings.tsx  UpdaterModal.tsx  home-data.ts
src/components/settings-ui/: SettingButton.tsx  SettingSwitch.tsx  Settings.test.tsx  Settings.tsx
src/components/ui/: SettingButton.tsx
src/config/: features.test.ts  features.ts
src/features/: README.md
src/hooks/: useSettingStore.test.ts  useSettingStore.tsx  useTodoStore.test.ts  useTodoStore.ts  useUpdater.test.ts  useUpdater.ts
src/lib/: author.ts
src/locale/: languages.ts
src/locale/en/: translation.json
src/locale/kh/: translation.json
src/locale/zh-CN/: translation.json
src/locale/zh-TW/: translation.json
src/platform/: README.md
src/services/: desktop.test.ts  desktop.ts  updater.ts
src/settings/: settings.schema.json  settingsPersistence.smoke.test.ts  settingsPersistence.test.ts  settingsPersistence.ts  settingsSchema.test.ts  settingsSchema.ts
src/shared/: README.md
src/todos/: todoPersistence.smoke.test.ts  todoPersistence.test.ts  todoPersistence.ts  todoSchema.test.ts  todoSchema.ts
src/types/: IEvents.ts  ISetting.ts
src/utils/: handleSettingChange.autostart-off.test.ts  handleSettingChange.test.ts  handleSettingChange.ts
