[workspace]
resolver = "2"
members = ["src-tauri"]

[workspace.package]
version = "0.1.0"
authors = ["likanug <likanug.g@qq.com>"]
edition = "2021"
description = "A Tauri‑based App (v2.0 +)"
keywords = []
license = "AGPL-3.0-or-later"
repository = "https://github.com/bruceblink/JustTodo"

[workspace.dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = { version = "2", features = ["tracing"] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2"
tauri-build = "2"
log = "0.4"
windows-sys = { version = "0.61", features = ["Win32_System_Console"]}
crossterm = { version = "0.29.0", features = [
    "event-stream",
    "osc52",
]}
